update some informations and correction of spelling mistakes

--- a/_posts/formats/2020-07-08-errors.md
+++ b/_posts/formats/2020-07-08-errors.md
@@ -23,10 +23,10 @@ L’url de l’appel est correct, mais la méthode utilisée n’est pas support
 L’appel a été correctement interprété, mais non exécuté. Ce code est retourné si l’appel est effectué dans un protocole non-sécurisé.
 
 * 500 : Internal Server Error
-Une erreur de traitement a été rencontrée par les serveurs HelloAsso. Dans ce cas, le problème doit être remonté à notre équipe afin que nous puissions en déterminer l’origine et, le cas échéant, appliquer un correctif.
+Une erreur de traitement a été rencontrée par les serveurs Ammy. Dans ce cas, le problème doit être remonté à notre équipe afin que nous puissions en déterminer l’origine et, le cas échéant, appliquer un correctif.
 
 * 503 : Service Unavailable
-Ce code de retour indique que les serveurs HelloAsso sont surchargés. Dans ce cas de figure, l’appel doit être réitéré après le délai indiqué dans le champs d’en-tête Retry-After de la réponse.
+Ce code de retour indique que les serveurs Ammy sont surchargés. Dans ce cas de figure, l’appel doit être réitéré après le délai indiqué dans le champs d’en-tête Retry-After de la réponse.
 
 Outre le code de réponse HTTP, les appels en erreur retournent une réponse contenant plus d’informations sur l’erreur rencontrée. Ces informations apparaissent sous deux formats. Le premier est un message à destination humaine, donnant une indication sur la possible origine du problème. Par exemple, si l’erreur provient d’un paramètre malformé, cela sera indiqué dans le message, avec le nom du paramètre en question.
 
