--- a/_posts/introduction/2020-07-01-welcome.md
+++ b/_posts/introduction/2020-07-01-welcome.md
@@ -5,4 +5,4 @@ category: Introduction
 
 Bienvenue sur la documentation de l'API d'Ammy.
 
-Vous souhaitez obtenir vos propres identifiants d'API ? Créé une communauté et devenez "premium".
+Vous souhaitez obtenir vos propres identifiants d'API ? Créé une communauté et devenez "Cercles d'Ammy".
