--- a/_posts/resources/2020-07-09-user.md
+++ b/_posts/resources/2020-07-09-user.md
@@ -44,9 +44,9 @@ La représentation JSON d'un utilisateur est la suivante :
 
 | Paramètre                                                    | **Type**     | Requis | Description                                                  | **Exemple**                                                  |
 | ------------------------------------------------------------ | ------------ | ------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| id <span class="read-only" data-text="LECTURE SEULE"></span> | string       | -      | Identifiant unique de la communauté                          | 5a54e226d95bd83fcd736f1d                                     |
+| id <span class="read-only" data-text="LECTURE SEULE"></span> | string       | -      | Identifiant unique de l'utilisateur                          | 5a54e226d95bd83fcd736f1d                                     |
 | external_initial_id <span class="read-only" data-text="LECTURE SEULE"></span> | string       | non    | Identifiant externe initial fournie à la création du compte  | 5e591e9ed3949d23c6b72a0f                                     |
-| slug <span class="read-only" data-text="LECTURE SEULE"></span> | string       | -      | Slug unique de la communauté                                 | john-d                                                       |
+| slug <span class="read-only" data-text="LECTURE SEULE"></span> | string       | -      | Slug unique de l'utilisateur                                 | john-d                                                       |
 | first_name                                                   | string       | oui    | Prénom                                                       | John                                                         |
 | last_name                                                    | string       | oui    | Nom                                                          | Doe                                                          |
 | avatar.medium / avatar.thumb<span class="read-only" data-text="LECTURE SEULE"></span> | string       | non    | Chemin de l'avatar (en différentes tailles) de l'utilisateur - à préfixer avec "https://ammy.fr" | /fichiers/user/john-d/avatar/thumb                           |
