--- a/_posts/resources/2020-07-09-user.md
+++ b/_posts/resources/2020-07-09-user.md
@@ -3,7 +3,9 @@ title: Utilisateurs
 category: Type de resources
 layout: null
 
+
 ---
+
 Nom technique :
 
 ```
@@ -46,6 +48,7 @@ La représentation JSON d'un utilisateur est la suivante :
 | ------------------------------------------------------------ | ------------ | ------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
 | id <span class="read-only" data-text="LECTURE SEULE"></span> | string       | -      | Identifiant unique de l'utilisateur                          | 5a54e226d95bd83fcd736f1d                                     |
 | external_initial_id <span class="read-only" data-text="LECTURE SEULE"></span> | string       | non    | Identifiant externe initial fournie à la création du compte  | 5e591e9ed3949d23c6b72a0f                                     |
+| parent_organization_id                                       | string       | oui    | Identifiant de la communauté à laquelle l'utilisateur sera rattachée. Le champ est requis uniquement pour la création | 5e591e9ed3949d23c6b72a0f                                     |
 | slug <span class="read-only" data-text="LECTURE SEULE"></span> | string       | -      | Slug unique de l'utilisateur                                 | john-d                                                       |
 | first_name                                                   | string       | oui    | Prénom                                                       | John                                                         |
 | last_name                                                    | string       | oui    | Nom                                                          | Doe                                                          |
